typescript/checker/tests/conformance/types/primitives/boolean/assignFromBooleanInterface.ts.stderr
error: AssignFailed {
    span: Span {
        lo: BytePos(
            30,
        ),
        hi: BytePos(
            31,
        ),
        ctxt: #0,
    },
    left: Lit(
        TsLitType {
            span: Span {
                lo: BytePos(
                    8,
                ),
                hi: BytePos(
                    12,
                ),
                ctxt: #0,
            },
            lit: Bool(
                Bool {
                    span: Span {
                        lo: BytePos(
                            8,
                        ),
                        hi: BytePos(
                            12,
                        ),
                        ctxt: #0,
                    },
                    value: true,
                },
            ),
        },
    ),
    right: Static(
        Static {
            span: Span {
                lo: BytePos(
                    34,
                ),
                hi: BytePos(
                    35,
                ),
                ctxt: #0,
            },
            ty: Interface(
                Interface {
                    span: Span {
                        lo: BytePos(
                            0,
                        ),
                        hi: BytePos(
                            0,
                        ),
                        ctxt: #0,
                    },
                    name: Atom('Boolean' type=static),
                    type_params: None,
                    extends: [],
                    body: [
                        Method(
                            MethodSignature {
                                span: Span {
                                    lo: BytePos(
                                        0,
                                    ),
                                    hi: BytePos(
                                        0,
                                    ),
                                    ctxt: #0,
                                },
                                readonly: false,
                                key: Ident(
                                    Ident {
                                        span: Span {
                                            lo: BytePos(
                                                0,
                                            ),
                                            hi: BytePos(
                                                0,
                                            ),
                                            ctxt: #0,
                                        },
                                        sym: Atom('valueOf' type=inline),
                                        type_ann: None,
                                        optional: false,
                                    },
                                ),
                                computed: false,
                                optional: false,
                                params: [],
                                ret_ty: Some(
                                    Keyword(
                                        TsKeywordType {
                                            span: Span {
                                                lo: BytePos(
                                                    0,
                                                ),
                                                hi: BytePos(
                                                    0,
                                                ),
                                                ctxt: #0,
                                            },
                                            kind: TsBooleanKeyword,
                                        },
                                    ),
                                ),
                                type_params: None,
                            },
                        ),
                    ],
                },
            ),
        },
    ),
    cause: [],
}
 --> $DIR/tests/conformance/types/primitives/boolean/assignFromBooleanInterface.ts:3:1
  |
3 | x = a;
  | ^

